# Reproducibility-Safety-Barrier-Certificates-for-Heterogeneous-Multi-Robot-Systems

./: README.md  pyproject.toml
results/: experiment_summary.csv  experiment_summary.json  lane_swap_10_heterogeneous_barrier_summary.json  lane_swap_15_heterogeneous_barrier_summary.json  lane_swap_20_heterogeneous_barrier_summary.json  lane_swap_6_heterogeneous_barrier_summary.json  lane_swap_6_nominal_summary.json  lane_swap_6_symmetric_barrier_summary.json  sensitivity_ds_0.00_gamma_0.50_heterogeneous_barrier_summary.json  sensitivity_ds_0.00_gamma_1.00_heterogeneous_barrier_summary.json  sensitivity_ds_0.00_gamma_2.00_heterogeneous_barrier_summary.json  sensitivity_ds_0.05_gamma_0.50_heterogeneous_barrier_summary.json  sensitivity_ds_0.05_gamma_1.00_heterogeneous_barrier_summary.json  sensitivity_ds_0.05_gamma_2.00_heterogeneous_barrier_summary.json  sensitivity_ds_0.10_gamma_0.50_heterogeneous_barrier_summary.json  sensitivity_ds_0.10_gamma_1.00_heterogeneous_barrier_summary.json  sensitivity_ds_0.10_gamma_2.00_heterogeneous_barrier_summary.json  uncertainty_baseline_six_uncertain_heterogeneous_barrier_summary.json
results/baseline/lane_swap_6/: heterogeneous_barrier_summary.json  nominal_summary.json  symmetric_barrier_summary.json
results/stress_test/lane_swap_6/: nominal_summary.json  (+2 more)
results/summary/: experiment_summary.csv  experiment_summary.json
scripts/: run_experiments.py  run_visual_simulation.py
src/hetero_sbc/: __init__.py  barriers.py  config.py  controllers.py  experiments.py  plotting.py  scenarios.py  simulator.py
tests/: test_core.py
(+30 files in other folders)
